[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "secret-manager"
version = "0.1.0"
description = ""
authors = [ "nmarghetti <marghettinicolas@hotmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.36.6"
pyyaml = "^6.0.2"
google-cloud-secret-manager = "^2.22.1"
google-crc32c = "^1.6.0"

[tool.poetry.scripts]
secret-manager = "secret_manager.main:main"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
autopep8 = "^2.3.2"
